Use BigInteger in ConstLevel